# LLMInfer

./: .gitignore  CMakeLists.txt  README.md
cmake/: cuda.cmake
code/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tick.h
code/include/model/: config.h  model.h  qwen3.h  qwen3_fused.h  raw_model_data.h
code/include/op/: add.h  embedding.h  encode.h  gate_up_swiglu.h  layer.h  matmul.h  mha.h  qk_norm_rope.h  qkv_matmul.h  rmsnorm.h  rope.h  swiglu.h
code/include/sampler/: argmax_sampler.h  sampler.h
code/include/tensor/: tensor.h
code/source/base/: alloc_cu.cpp  base.cpp  buffer.cpp  cuda_config.cpp
code/source/model/: model.cpp  qwen3.cpp  qwen3_fused.cpp  raw_model_data.cpp
code/source/op/: encode.cpp  gate_up_swiglu.cpp  layer.cpp  matmul.cpp  mha.cpp  qk_norm_rope.cpp  qkv_matmul.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
code/source/op/kernel/: kernel_interface.cpp  kernel_interface.h
code/source/op/kernel/cpu/: embedding_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  softmax_kernel.cpp
code/source/op/kernel/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  embedding_kernel.cu  embedding_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  softmax_kernel.cu  swiglu_kernel.cu  swiglu_kernel.cuh
code/source/sampler/: argmax_sampler.cpp
demo/: main.cpp  main_qwen3.cpp
kuiper/include/base/: alloc.h  base.h  cuda_config.h
kuiper/include/model/: config.h  llama2.h  model.h
kuiper/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
kuiper/include/sampler/: argmax_sampler.h  sampler.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  buffer.cpp  cuda_config.cpp
kuiper/source/model/: llama2.cpp  model.cpp
kuiper/source/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
kuiper/source/op/kernel/: kernel_interface.cpp  kernel_interface.h
kuiper/source/op/kernel/cpu/: add_kernel.cpp  add_kernel.h  embedding_kernel.cpp  embedding_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
kuiper/source/op/kernel/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  embedding_kernel.cu  embedding_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  softmax_kernel.cuh  swiglu_kernel.cu
kuiper/source/sampler/: argmax_sampler.cpp
kuiper/source/tensor/: tensor.cpp
main/: CMakeLists.txt  main_qwen3.cpp  main_qwen3_awq.cpp
pytorch_infer/: qwen3_fp32_infer.py
test/: CMakeLists.txt  test_main.cpp
test/test_op/: test_load.cpp  test_op_add.cpp  test_op_argmax.cpp  test_op_embedding.cpp  test_op_matmul.cpp  test_op_mha.cpp  test_op_rmsnorm.cpp  test_op_rope.cpp  test_op_softmax.cpp  test_op_swiglu.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
test_benchmark/: qwen3_4b_bf16_thinking_infer.py  qwen3_4b_vllm_awq_int4_thinking_argmax_benchmark.py  qwen3_4b_vllm_bf16_thinking_benchmark.py
test_kernel/: add  add.cu  argmax  argmax.cu  bench_qwen3_gemv_bf16_cublaslt  bench_qwen3_gemv_bf16_cublaslt.cu  test_qwen3_4b_awq_int4_accuracy.py  test_qwen3_bf16_ops.py
tools/: all_weight_tensor.py
tools/export_qwen3/: config.py  convert_qwen3_dense_to_bin.py  load.py  model.py  qwen3_dense_unified_converter (old).py  qwen3_dense_unified_converter.py  write_bf16_bin.py
tools/qwen3_awq/: qweight_tensor.py  qwen3_awq_converter.py  weight_layout.py
